--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -9,20 +9,20 @@
   
 
   <div class="social-icons">
-    <a href="https://www.instagram.com/wilhelmgroth" target="_blank">
+    <a href="https://github.com/wilhelmgrothbl" target="_blank">
         <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
     </a>
-    <a href="https://www.linkedin.com/in/wilhelmgroth" target="_blank">
+    <a href="linkedin.com/in/wilhelm-groth-bab387253" target="_blank">
         <fa-icon [icon]="faIcons[1]" size="2x"></fa-icon>
 
     </a>
-    <a href="https://github.com/wilhelmgrothbl" target="_blank">
+    <a href="https://www.instagram.com/wilhelmgroth" target="_blank">
         <fa-icon [icon]="faIcons[2]" size="2x"></fa-icon>
     </a>
-    <a href="tel:123-456-7890">
+    <a href="tel:+46725128254">
         <fa-icon [icon]="faPhone"></fa-icon>
       </a>
-      
+   
       
   </div>
   
