--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -12,7 +12,7 @@
     <a href="https://github.com/wilhelmgrothbl" target="_blank">
         <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
     </a>
-    <a href="linkedin.com/in/wilhelm-groth-bab387253" target="_blank">
+    <a href="https://www.linkedin.com/in/wilhelm-groth-bab387253/" target="_blank">
         <fa-icon [icon]="faIcons[1]" size="2x"></fa-icon>
 
     </a>
