--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,20 +1,22 @@
-<div class="flex flex-wrap justify-center mx-auto mt-40 pt-33">
-  <!-- <div class="my-card-background rounded-lg shadow w-1/2 h-48 mx-2"> -->
-  <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
-    <div
-      class="h-64 bg-cover hover:bg-gray bg-center"
-      style="
+<div class="proj-container">
+
+  <div class="flex flex-wrap justify-center mx-auto mt-40 pt-33">
+    <!-- <div class="my-card-background rounded-lg shadow w-1/2 h-48 mx-2"> -->
+      <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
+        <div
+        class="h-64 bg-cover hover:bg-gray bg-center"
+        style="
         background-image: url('https://img.theculturetrip.com/wp-content/uploads/2016/08/pl_launch_web_assets-14.jpg');
-      "
+        "
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
       <div class="font-medium text-base text-gray-darker mb-4">Draftligan</div>
       <p class="font-normal text-gray text-sm mb-2">
-        Small React app that displays the standings and history for a group of friends. 
+        Small React app that displays live standings and history for a group of friends. 
       </p>
       <div class="social-icons-project">
         <a href="https://github.com/wilhelmgrothbl" target="_blank">
-          <fa-icon [icon]="faIcons[2]" size="2x"></fa-icon>
+          <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
         </a>
         <a href="https://github.com/wilhelmgrothbl" target="_blank">
           <fa-icon [icon]="faLink" size="2x"></fa-icon>
@@ -22,14 +24,14 @@
       </div>
     </div>
   </div>
-
-
+  
+  
   <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
     <div
-      class="h-64 bg-cover bg-center hover:bg-gray"
-      style="
+    class="h-64 bg-cover bg-center hover:bg-gray"
+    style="
         background-image: url('../../assets/kanhaiya-sharma-_wew3JYSVpA-unsplash\ \(1\).jpg');
-      "
+        "
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
       <div class="font-medium text-base text-gray-darker mb-4">
@@ -40,8 +42,8 @@
       </p>
       <div class="social-icons-project">
         <a href="https://spotifytwopointzero.com" target="_blank" class="rotate-icon">
-            <fa-icon [icon]="faIcons[3]" size="2x" ></fa-icon>
- 
+          <fa-icon [icon]="faIcons[3]" size="2x" ></fa-icon>
+          
         </a>
       </div>
     </div>
@@ -55,4 +57,6 @@
       <div class="flex-grow text-right"></div>
     </div>
   </div>
+</div>
+
 </div>
