--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -18,7 +18,7 @@
         <a href="https://github.com/wilhelmgrothbl" target="_blank">
           <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
         </a>
-        <a href="https://github.com/wilhelmgrothbl" target="_blank">
+        <a href="https://draftligan.netlify.app/" target="_blank">
           <fa-icon [icon]="faLink" size="2x"></fa-icon>
         </a>
       </div>
