--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,7 +12,7 @@
     <div class="mx-6 my-4 border-b border-gray-light">
       <div class="font-medium text-base text-gray-darker mb-4">Draftligan</div>
       <p class="font-normal text-gray text-sm mb-2">
-        Small React app that displays live standings and history for a group of friends. 
+        Small React app that displays live FPL standings and history. 
       </p>
       <div class="social-icons-project">
         <a href="https://github.com/wilhelmgrothbl" target="_blank">
