--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,12 +10,12 @@
         "
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
-      <div class="font-medium text-base text-gray-darker mb-4">Draftligan</div>
+      <div class="font-mono font-bold text-lg text-gray-darker mb-4">Draftligan</div>
       <p class="font-normal text-gray text-sm mb-2">
         Small React app that displays live FPL standings and history. 
       </p>
       <div class="social-icons-project">
-        <a href="https://github.com/wilhelmgrothbl" target="_blank">
+        <a href="https://github.com/wilhelmgrothbl/draftligan-app" target="_blank">
           <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
         </a>
         <a href="https://draftligan.netlify.app/" target="_blank">
@@ -30,20 +30,19 @@
     <div
     class="h-64 bg-cover bg-center hover:bg-gray"
     style="
-        background-image: url('../../assets/kanhaiya-sharma-_wew3JYSVpA-unsplash\ \(1\).jpg');
+        background-image: url('../../assets/diego.jpg');
         "
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
-      <div class="font-medium text-base text-gray-darker mb-4">
-        Spotify 2.0
+      <div class="font-mono font-bold text-lg text-gray-darker mb-4">
+        Portfolio
       </div>
       <p class="font-normal text-gray-dark text-sm mb-2">
-        Coming soon? 
+        Portfolio devoloped with Angular and Tailwind. 
       </p>
       <div class="social-icons-project">
-        <a href="https://spotifytwopointzero.com" target="_blank" class="rotate-icon">
-          <fa-icon [icon]="faIcons[3]" size="2x" ></fa-icon>
-          
+        <a href="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank" class="rotate-icon">
+          <fa-icon [icon]="faIcons[0]" size="2x" ></fa-icon>
         </a>
       </div>
     </div>
