--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -8,7 +8,13 @@
   .social-icons a {
     margin: 0 10px;
   }
+
   .social-icons a:hover {
+   color: rgb(115, 22, 22);
+    opacity: 0.5;
+  }
+  
+  .modal-info button:hover {
    color: rgb(115, 22, 22);
     opacity: 0.5;
   }
