--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,6 +4,10 @@
     </div>
     <div class="text-center text-2xl text-black">
         Front-end developer
+      
+    </div>
+    <div>
+        
     </div>
   </div>
   
@@ -14,7 +18,6 @@
     </a>
     <a href="https://www.linkedin.com/in/wilhelm-groth-bab387253/" target="_blank">
         <fa-icon [icon]="faIcons[1]" size="2x"></fa-icon>
-
     </a>
     <a href="https://www.instagram.com/wilhelmgroth" target="_blank">
         <fa-icon [icon]="faIcons[2]" size="2x"></fa-icon>
@@ -22,7 +25,13 @@
     <a href="tel:+46725128254">
         <fa-icon [icon]="faPhone"></fa-icon>
       </a>
-   
-      
   </div>
   
+  <div class="modal-info rounded-full align-middle">
+    <div class="font-sans text-2xl text-center">
+        <button (click)="openModal()">this is me</button>
+        
+        <app-modal *ngIf="showModal" (close)="closeModal()"></app-modal>
+      </div>
+  </div>
+ 
