bunch of stuff now its goodnight

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -32,6 +32,7 @@
         <button (click)="openModal()">this is me</button>
         
         <app-modal *ngIf="showModal" (close)="closeModal()"></app-modal>
+        <p class="text-sm text-orange-300">click me plz ↑</p>
       </div>
   </div>
  
