--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,7 +10,7 @@
         "
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
-      <div class="font-mono font-bold text-lg text-gray-darker mb-4">Draftligan</div>
+      <div class="font-sans font-bold text-lg text-gray-darker mb-4">Draftligan</div>
       <p class="font-normal text-gray text-sm mb-2">
         Small React app that displays live FPL standings and history. 
       </p>
@@ -34,11 +34,11 @@
         "
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
-      <div class="font-mono font-bold text-lg text-gray-darker mb-4">
+      <div class="font-sans font-bold text-lg text-gray-darker mb-4">
         Portfolio
       </div>
       <p class="font-normal text-gray-dark text-sm mb-2">
-        Portfolio devoloped with Angular and Tailwind. 
+        Portfolio developed with Angular and Tailwind, featuring a collection of my latest web application projects.
       </p>
       <div class="social-icons-project">
         <a href="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank" class="rotate-icon">
@@ -56,5 +56,7 @@
       <div class="flex-grow text-right"></div>
     </div>
   </div>
+
+  
 </div>
 
