--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -4,17 +4,27 @@
         <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
       </div>
       <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-      <div class="inline-block align-bottom bg-orange-200 rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
+      <div class="inline-block align-bottom bg-gradient-to-r from-white to-orange-200 rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
         <div>
-          <div class=" flex items-center justify-center rounded-full ">
+          <div class=" flex items-center justify-center rounded-b-full opacity-45">
          <img class="shadow-lg rounded-full w-56 align-middle border-none" src="../../assets/1669793398317.jpg">
           </div>
-          <div class="mt-3 text-center sm:mt-5">
-                <div class="font-sans text-center  text-black">
-                    <p class="font-sans text-2xl">Hi, I'm Wilhelm. </p>
-                    <p class="mt-3 text-base te">I love bridge (the card game), chess, football and <br> web development. </p> 
-                    <p class="mt-1 text-base">At present, I am interning at Björn Lundén in Hudiksvall and my focus is on development work. </p>
-                </div>           
+          <div class="mt-3 sm:mt-5 text-center ">
+            <div class="mb-3">
+
+                <span class="items-center ">Wilhelm Groth</span>
+                <p class="text-xs">Front end-developer.</p> 
+                <ul class="list-none">
+                    <li class="text-2xl mt-3" [class.animate__fadeIn]="currentIndex === i" [class.hidden]="currentIndex !== i" *ngFor="let item of items; let i = index;">
+                      {{item}}
+                    </li>
+                  </ul>
+            </div>
+           
+               
+               
+
+             
           </div>
         </div>
         <div class="mt-5 sm:mt-6">
