--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -13,7 +13,7 @@
             <div class="mb-3">
 
                 <span class="items-center ">Wilhelm Groth</span>
-                <p class="text-xs">Front end-developer.</p> 
+                <p class="text-xs">Front end-developer</p> 
                 <ul class="list-none">
                     <li class="text-2xl mt-3" [class.animate__fadeIn]="currentIndex === i" [class.hidden]="currentIndex !== i" *ngFor="let item of items; let i = index;">
                       {{item}}
@@ -27,8 +27,8 @@
              
           </div>
         </div>
-        <div class="mt-5 sm:mt-6">
-            <button type="button" class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-orange-200 text-base font-medium text-white hover:bg-orange-400 focus:outline-none focus:ring-2 focus:ring-offset-2  sm:text-sm" (click)="closeModal()">
+        <div class="mt-5 sm:mt-6 text-center">
+            <button type="button" class="inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-orange-200 opacity-75 text-base font-medium text-white hover:bg-orange-300 focus:outline-none focus:ring-2 focus:ring-offset-2  sm:text-sm" (click)="closeModal()">
                 Close
               </button>
         </div>
