--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -14,17 +14,14 @@
 
                 <span class="items-center ">Wilhelm Groth</span>
                 <p class="text-xs">Front end-developer</p> 
-                <ul class="list-none">
-                    <li class="text-2xl mt-3" [class.animate__fadeIn]="currentIndex === i" [class.hidden]="currentIndex !== i" *ngFor="let item of items; let i = index;">
-                      {{item}}
-                    </li>
-                  </ul>
-            </div>
+               
+              </div>
+              <p class="font-bold text-base ">Hey there!</p>
+              <p class=" text-left text-gray-500 text-sm leading-5"> I'm a frontend enthusiast with a passion for creating amazing things. When I'm not busy working on web development, you can find me playing Bridge, cheering on Liverpool FC, or spending time with my awesome 4-year-old daughter. <br><br>
+               Currently, I'm interning at Björn Lundén where I'm honing my skills in both frontend and backend development. My ultimate goal is to become a frontend wizard and create stunning designs that capture the attention of audiences everywhere.
+               Thanks for stopping by and checking out my portfolio!</p>
            
-               
-               
 
-             
           </div>
         </div>
         <div class="mt-5 sm:mt-6 text-center">
