--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,10 +5,9 @@
       <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
         <div
         class="h-64 bg-cover hover:bg-gray bg-center"
-        style="
-        background-image: url('https://img.theculturetrip.com/wp-content/uploads/2016/08/pl_launch_web_assets-14.jpg');
-        "
+        style="background-image: url('https://img.theculturetrip.com/wp-content/uploads/2016/08/pl_launch_web_assets-14.jpg')"
     ></div>
+    
     <div class="mx-6 my-4 border-b border-gray-light">
       <div class="font-sans font-bold text-lg text-gray-darker mb-4">Draftligan</div>
       <p class="font-normal text-gray text-sm mb-2">
@@ -32,6 +31,7 @@
     style="
         background-image: url('../../assets/diego.jpg');
         "
+        
     ></div>
     <div class="mx-6 my-4 border-b border-gray-light">
       <div class="font-sans font-bold text-lg text-gray-darker mb-4">
@@ -41,7 +41,7 @@
         Portfolio developed with Angular and Tailwind, featuring a collection of my latest web application projects.
       </p>
       <div class="social-icons-project">
-        <a href="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank" class="rotate-icon">
+        <a href="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank">
           <fa-icon [icon]="faIcons[0]" size="2x" ></fa-icon>
         </a>
       </div>
@@ -60,3 +60,12 @@
   
 </div>
 
+<!-- 
+a class="btn rounded-lg" href="#link" (click)="openModal()">
+            <i>W</i><i>h</i><i>o</i><i></i><i></i>
+            <i>a</i><i>m</i><i></i>
+            <i></i><i>i</i>?<i></i><i></i><i></i><i></i>
+          </a>
+        
+  
+        <app-modal *ngIf="showModal" (close)="closeModal()"></app-modal> -->
