--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -19,16 +19,16 @@
   
 
   <div class="social-icons">
-    <a href="https://github.com/wilhelmgrothbl" target="_blank">
+    <a href="https://github.com/wilhelmgrothbl" title="https://github.com/wilhelmgrothbl" target="_blank">
         <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
     </a>
-    <a href="https://www.linkedin.com/in/wilhelm-groth-bab387253/" target="_blank">
+    <a href="https://www.linkedin.com/in/wilhelm-groth-bab387253/" title="https://www.linkedin.com/in/wilhelm-groth-bab387253/" target="_blank">
         <fa-icon [icon]="faIcons[1]" size="2x"></fa-icon>
     </a>
-    <a href="https://www.instagram.com/wilhelmgroth" target="_blank">
+    <a href="https://www.instagram.com/wilhelmgroth" title="https://www.instagram.com/wilhelmgroth" target="_blank">
         <fa-icon [icon]="faIcons[2]" size="2x"></fa-icon>
     </a>
-    <a href="tel:+46725128254">
+    <a href="tel:+46725128254" title="+46725128254">
         <fa-icon [icon]="faPhone"></fa-icon>
       </a>
   </div>
