--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -14,10 +14,10 @@
         Small React app that displays live FPL standings and history. 
       </p>
       <div class="social-icons-project">
-        <a href="https://github.com/wilhelmgrothbl/draftligan-app" target="_blank">
+        <a href="https://github.com/wilhelmgrothbl/draftligan-app" title="https://github.com/wilhelmgrothbl/draftligan-app" target="_blank">
           <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
         </a>
-        <a href="https://draftligan.netlify.app/" target="_blank">
+        <a href="https://draftligan.netlify.app/" title="https://draftligan.netlify.app/" target="_blank">
           <fa-icon [icon]="faLink" size="2x"></fa-icon>
         </a>
       </div>
@@ -41,7 +41,7 @@
         Portfolio developed with Angular and Tailwind, featuring a collection of my latest web application projects.
       </p>
       <div class="social-icons-project">
-        <a href="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank">
+        <a href="https://github.com/wilhelmgrothbl/portfolio-app" title="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank">
           <fa-icon [icon]="faIcons[0]" size="2x" ></fa-icon>
         </a>
       </div>
