--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,22 +3,41 @@
   <div class="flex flex-wrap justify-center mx-auto mt-40 pt-33">
     <!-- <div class="my-card-background rounded-lg shadow w-1/2 h-48 mx-2"> -->
       <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
-        <div
-        class="h-64 bg-cover hover:bg-gray bg-center"
-        style="background-image: url('https://img.theculturetrip.com/wp-content/uploads/2016/08/pl_launch_web_assets-14.jpg')"
-    ></div>
-    
-    <div class="mx-6 my-4 border-b border-gray-light">
-      <div class="font-sans font-bold text-lg text-gray-darker mb-4">Draftligan</div>
+        <div class="h-64 bg-cover hover:bg-gray bg-center" style="background-image: url('https://img.theculturetrip.com/wp-content/uploads/2016/08/pl_launch_web_assets-14.jpg')">
+        </div>
+        <div class="mx-6 my-4">
+          <div class="font-sans font-bold text-lg text-gray-darker mb-4">Draftligan</div>
+          <p class="font-normal text-gray text-sm mb-2">
+            Small React app that displays live FPL standings and history.
+          </p>
+          <div class="flex justify-start items-end">
+            <div class="flex items-center">
+              <a href="https://github.com/wilhelmgrothbl/draftligan-app" title="https://github.com/wilhelmgrothbl/draftligan-app" target="_blank">
+                <fa-icon [icon]="faIcons[0]" size="2x" class="mr-2 text-gray-100 hover:text-gray-500"></fa-icon>
+              </a>
+              <a href="https://draftligan.netlify.app/" title="https://draftligan.netlify.app/" target="_blank">
+                <fa-icon [icon]="faLink" size="2x" class="mr-2 text-gray-100 hover:text-gray-500"></fa-icon>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+  
+  <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
+    <div class="h-64 bg-cover hover:bg-gray bg-center" style="background-image: url('https://images.unsplash.com/photo-1471970471555-19d4b113e9ed?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1160&q=80')">
+    </div>
+    <div class="mx-6 my-4">
+      <div class="font-sans font-bold text-lg text-gray-darker mb-4">Book app</div>
       <p class="font-normal text-gray text-sm mb-2">
-        Small React app that displays live FPL standings and history. 
+        This Angular app showcases a curated collection of books. The book collection is generated using the power of OpenAI's GPT-3 technology. Dive into a captivating book series that revolves around the fascinating lives of three cousins: Aksel, Alice, and Ilse.
       </p>
-      <div class="social-icons-project">
-        <a href="https://github.com/wilhelmgrothbl/draftligan-app" title="https://github.com/wilhelmgrothbl/draftligan-app" target="_blank">
-          <fa-icon [icon]="faIcons[0]" size="2x"></fa-icon>
+      <div class="flex items-center">
+        <a href="https://github.com/wilhelmgrothbl/book-app" title="https://github.com/wilhelmgrothbl/book-app" target="_blank">
+          <fa-icon [icon]="faIcons[0]" size="2x" class="mr-2 text-gray-100 hover:text-black"></fa-icon>
         </a>
-        <a href="https://draftligan.netlify.app/" title="https://draftligan.netlify.app/" target="_blank">
-          <fa-icon [icon]="faLink" size="2x"></fa-icon>
+        <a href="https://kusinerna.netlify.app/" title="https://kusinerna.netlify.app/" target="_blank">
+          <fa-icon [icon]="faLink" size="2x" class="mr-2 text-gray-100 hover:text-gray-500"></fa-icon>
         </a>
       </div>
     </div>
@@ -27,34 +46,33 @@
   
   <div class="max-w-sm rounded-sm overflow-hidden shadow-lg m-16">
     <div
-    class="h-64 bg-cover bg-center hover:bg-gray"
+    class="h-64 bg-cover bg-center hover:b          g-gray"
     style="
         background-image: url('../../assets/diego.jpg');
         "
         
     ></div>
-    <div class="mx-6 my-4 border-b border-gray-light">
+    <div class="mx-6 my-4 ">
       <div class="font-sans font-bold text-lg text-gray-darker mb-4">
         Portfolio
       </div>
       <p class="font-normal text-gray-dark text-sm mb-2">
         Portfolio developed with Angular and Tailwind, featuring a collection of my latest web application projects.
       </p>
-      <div class="social-icons-project">
+      <div class="flex items-center">
+        <a href="https://github.com/wilhelmgrothbl/draftligan-app" title="https://github.com/wilhelmgrothbl/draftligan-app" target="_blank">
+          <fa-icon [icon]="faIcons[0]" size="2x" class="mr-2 text-gray-100 hover:text-gray-500"></fa-icon>
+        </a>
         <a href="https://github.com/wilhelmgrothbl/portfolio-app" title="https://github.com/wilhelmgrothbl/portfolio-app" target="_blank">
-          <fa-icon [icon]="faIcons[0]" size="2x" ></fa-icon>
+          <fa-icon [icon]="faLink" size="2x" class="mr-2 text-gray-100 hover:text-gray-500"></fa-icon>
         </a>
       </div>
+      
     </div>
-    <div class="mx-6 my-4 flex">
-      <div class="flex-grow">
-        <span class="inline-block bg-red-light rounded-full p-1 pb-0 mr-2">
-        </span>
-        <span class="inline-block bg-red-light rounded-full p-1 pb-0 mr-2">
-        </span>
-      </div>
-      <div class="flex-grow text-right"></div>
-    </div>
+
+
+    
+
   </div>
 
   
