--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,11 @@
 
 
 body {
-    background-color: bisque
+    background-color: rgb(175, 197, 155)
 }
 
 .my-card-background {
-    background-color: bisque;
+    background-color: rgb(187, 202, 134);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600  ;
 }
